src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-ofT-dhU-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized true\n    open-floating true\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]
size: 1272 × 712, bounds: 1280 × 720, states: [Activated]

unfullscreen configure:
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
